@@ -3,16 +3,24 @@ package ru.naumen.servacc.platform;
 import java.io.File;
 import java.io.IOException;
 import java.text.MessageFormat;
+import java.lang.ProcessBuilder;
 
 /**
  * @author Andrey Hitrin
+ * @since 08.02.12
  */
 public class Linux implements Platform
 {
     @Override
     public void openTerminal(Object[] params) throws IOException
     {
-        Runtime.getRuntime().exec(MessageFormat.format("putty {2} -telnet {0} -P {1,number,#}", params));
+    ProcessBuilder subp = new ProcessBuilder(
+        "guake",
+        "-n",
+        "1",
+        "-e",
+        MessageFormat.format("telnet {0} {1,number,#}",params));
+    subp.start();
     }
 
     @Override
@@ -49,7 +57,7 @@ public class Linux implements Platform
     @Override
     public boolean needToNegotiateProtocolOptions()
     {
-        return false;
+        return true;
     }
 
     @Override
